fixed the wrap thing shhhhhhhhs

--- a/client/src/pages/Post/Post.css
+++ b/client/src/pages/Post/Post.css
@@ -5,3 +5,6 @@
 .color2 {
  background-color: rgba(255, 255, 255, 0.808);
 }
+.wrap {
+ overflow-wrap: break-word;
+}
